# arma

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.en.md  README.md  config.yaml  docker-compose.yml  install.sh
.github/: pull_request_template.md
.github/workflows/: release-assets.yml
docs/: API_INTEGRATION.en.md  API_INTEGRATION.md  CHANGE_CHECKLIST.md  DEVELOPMENT.en.md  DEVELOPMENT.md  OPERATIONS.en.md  OPERATIONS.md  OPERATIONS_RUNBOOK.en.md  OPERATIONS_RUNBOOK.md  README.md
examples/vendor-node/: README.en.md  README.md  server.js
filter_packs/: 00-core.yaml  10-profile-balanced.yaml  10-profile-strict.yaml  50-finance.yaml.disabled  60-public-sector.yaml.disabled  70-ecommerce.yaml.disabled  98-optional-high-risk.yaml.disabled  99-custom.yaml
src/: main.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src/cli/: commands.rs  mod.rs  process.rs  update.rs
src/config/: mod.rs  models.rs  watcher.rs
src/core/: engine.rs  mod.rs  normalizer.rs
src/filter_pack/: loader.rs  mod.rs  models.rs
src/logger/: mod.rs
src/metrics/: mod.rs
src/tui/: dashboard.rs  mod.rs
