[package]
name = "arma"
version = "1.1.0"
edition = "2021"
default-run = "arma"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
aho-corasick = "1.1"
regex = "1.11"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
notify = "7.0"
ratatui = { version = "0.29", features = ["serde"] }
crossterm = "0.28"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
daemonize = "0.5"
nix = { version = "0.30", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9"
socket2 = "0.6"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
lto = true
